ingress-test/testing-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  testing
  labels:
    env: testing
