ingress-test/tomcat-svc.yml
apiVersion: v1
kind: Service
metadata:
  name:  tomcat-svc
  namespace: testing
  labels:
    app: tomcat-svc
spec:
  selector:
    app:  tomcat
  ports:
  - name:  http
    port:  80
    targetPort:  8080
    protocol: TCP
