ingress-test/tomcat-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 192.168.16.211
  http:
    paths:
    - path:
      backend:
        serviceName: tomcat-svc
        servicePort: 80
